# sopel-waifu

./: .git-blame-ignore-revs  .gitignore  CONTRIBUTING.md  MANIFEST.in  Makefile  NEWS  README.md  duplicate_detect.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: json-check.yml  json-checks.yml
scripts/: duplicate_detect.py  generate_from_anidb_entry.py  sort_check.py  sort_json5.py
sopel_waifu/: __init__.py  db.py  errors.py  util.py  waifu.json  waifu.json.schema  waifu.json5
