[metadata]
name = sopel-waifu
version = 0.1.0
description = A Sopel plugin that picks a waifu for you.
author = dgw
author_email = dgw@technobabbl.es
url = https://github.com/dgw/sopel-waifu
license = Eiffel Forum License, version 2
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Eiffel Forum License (EFL)
    License :: OSI Approved :: Eiffel Forum License
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
packages = find:
zip_safe = false
include_package_data = true
install_requires =
    sopel>=7.1,<9

[options.entry_points]
sopel.plugins =
    waifu = sopel_waifu
